Apply cosmetic fixes to docs.

--- a/static/static/style.css
+++ b/static/static/style.css
@@ -121,6 +121,9 @@ ul.flat {
     list-style-type: none;
     padding: 0;
 }
+    ul li {
+        margin-bottom: 10px;
+    }
 
 button, .button {
     background: var(--black);
