--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 <div class="intro">
   <h1>Human-oriented Markup Language</h1>
   <p>HUML is a simple, strict, serialization language for documents, datasets, and configuration.
-    It prioritizes form for human-redability. It looks like YAML, but tries to avoid its complexity, ambiguity, and pitfalls.
+    It prioritizes strict form for human-redability. It looks like YAML, but tries to avoid its complexity, ambiguity, and pitfalls.
   </p>
 </div>
 
