--- a/static/static/style.css
+++ b/static/static/style.css
@@ -1,6 +1,6 @@
 :root {
     --primary: #057D5F;
-    --secondary: #a4926a;
+    --secondary: #666;
     --black: #222;
 }
 
@@ -10,24 +10,22 @@
 html, body {
     margin: 0;
     padding: 0;
-    font-size: 18px;
+    font-size: 19px;
 }
 body {
     background: #fff;
-    font-family: "Inter", sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji';
     font-weight: 400;
-    line-height: 1.5;
+    line-height: 1.4;
     color: var(--black);
 }
 
 a {
     color: var(--primary);
-    text-decoration: underline;
-    text-decoration-thickness: 2.5px;
-    text-underline-offset: 5px;
+    text-decoration: none;
 }
     a:hover {
-        color: #000;
+        color: #111;
     }
 
 h1, h2, h3, h4, h5, h6 {
@@ -56,7 +54,7 @@ p {
 }
 
 hr {
-    background: #e3d2af;
+    background: #ddd;
     border: 0;
     height: 1px;
     margin: 45px 0;
@@ -189,9 +187,6 @@ button, .button {
     .intro h2 {
         margin: 0 0 30px 0;
     }
-    .intro p {
-        color: #777;
-    }
     .partner img {
         display: block;
         width: 75px;
@@ -208,12 +203,22 @@ button, .button {
         background: none;
     }
 
+.has-toc {
+    display: flex
+}
+    .has-toc .container {
+        margin-left: 0;
+        margin-right: 0;
+    }
 .toc {
-    float: right;
-    padding: 15px;
-    box-shadow: 1px 1px 4px #eee;
-    border: 2px solid #eee;
-    margin: 0 0 30px 30px;
+    background-color: #fafafa;
+    border: 1px solid #ddd;
+    padding: 15px 30px 15px 15px;
+    position: sticky;
+    top: 0;
+    align-self: flex-start;
+    height: 100vh;
+    margin-right: 30px;
 }
     .toc ul {
         padding-inline-start: 30px;
@@ -224,7 +229,7 @@ button, .button {
 
 
 .footer {
-    border-top: 1px solid #e3d2af;
+    border-top: 1px solid #ddd;
     padding-top: 30px;
     margin: 10vh 0 15px 0;
     color: var(--secondary);
@@ -239,7 +244,7 @@ button, .button {
     padding: 0;
 }
     .posts-list .meta {
-        border-top: 1px solid #e3d2af;
+        border-top: 1px solid #ddd;
         margin-top: 40px;
         padding-top: 30px;
         font-size: 0.875rem;
