Tweak responsive styles and template.

--- a/templates/base.html
+++ b/templates/base.html
@@ -65,6 +65,7 @@
       <label for="nav-toggle" class="nav-toggle-label" aria-label="Toggle nav">☰</label>
 
       <div class="items">
+        <a href="{{ get_url(path="") }}">Home</a>
         <a href="{{ get_url(path="@/specifications/v0.1.0.md") }}">Specification</a>
         <a href="{{ get_url(path="@/code.md") }}">Code</a>
         <a href="{{ get_url(path="@/examples.md") }}">Examples</a>
