--- a/templates/index.html
+++ b/templates/index.html
@@ -4,16 +4,11 @@
 <div class="intro">
   <h1>Human-oriented Markup Language</h1>
   <p>HUML is a simple, strict, serialization language for documents, datasets, and configuration.
-    It prioritizes strict form for human-redability. It looks like YAML, but tries to avoid its complexity, ambiguity, and pitfalls.
+    It prioritizes strict form for human-readability. It looks like YAML, but tries to avoid its complexity, ambiguity, and pitfalls.
   </p>
 </div>
 
 <main class="content">
-  <section class="code">
-    {% set snippet = get_page(path="example.md") %}
-    {{ snippet.content | safe }}
-  </section>
-
   <section class="intro">
     {% set snippet = get_page(path="home.md") %}
     {{ snippet.content | safe }}
