--- a/static/static/style.css
+++ b/static/static/style.css
@@ -10,7 +10,7 @@
 html, body {
     margin: 0;
     padding: 0;
-    font-size: 19px;
+    font-size: 18px;
 }
 body {
     background: #fff;
@@ -177,7 +177,7 @@ button, .button {
 }
 
 .intro {
-    margin: 15vh 0 60px 0;
+    margin: 60px 0 60px 0;
 }
     .intro .title {
         font-size: 2.5rem;
