Fix template URL paths.

--- a/templates/base.html
+++ b/templates/base.html
@@ -58,7 +58,7 @@
 <div class="container main">
   <header class="header row">
     <div class="col-2 col-fix">
-      <div class="logo"><a href="/"><img src="/static/logo.svg" alt="{{ config.extra.default_title }}" /></a></div>
+      <div class="logo"><a href="{{ get_url(path='/') }}"><img src="{{ get_url(path='/static/logo.svg') }}" alt="{{ config.extra.default_title }}" /></a></div>
     </div>
     <nav class="col-10 col-fix nav">
       <input type="checkbox" id="nav-toggle" />
