--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="intro">
-  <h1>Human-oriented Markup Language</h1>
+  <h1>Human-oriented Markup Language <sup class="tag">Experimental</sup></h1>
   <p>HUML is a simple, strict, serialization language for documents, datasets, and configuration.
     It prioritizes strict form for human-readability. It looks like YAML, but tries to avoid its complexity, ambiguity, and pitfalls.
   </p>
