Add `swap` link on playground page to swap content/types between editors.

--- a/static/static/playground.css
+++ b/static/static/playground.css
@@ -33,6 +33,10 @@
     margin-left: 15px;
     display: inline-block;
 }
+.controls .btn-swap {
+    display: inline-block;
+    margin-right: 15px;
+}
 .controls .btn-copy.disabled {
     color: #888;
     cursor: default;
