--- a/templates/base.html
+++ b/templates/base.html
@@ -69,7 +69,7 @@
         {{ macros::page_link(name="Home", path="") }}
         {{ macros::page_link(name="Specification", path="@/specifications/v0.1.0.md") }}
         {{ macros::page_link(name="Code", path="@/code.md") }}
-        {{ macros::page_link(name="Examples", path="@/examples.md") }}
+        {{ macros::page_link(name="Playground", path="@/playground.md") }}
       </div>
     </nav>
   </header>
