--- a/templates/playground.html
+++ b/templates/playground.html
@@ -11,7 +11,7 @@
             <div class="editor editor-wrap-left">
                 <div class="controls">
                     <div class="row">
-                        <div class="col-8">
+                        <div class="col-7">
                             <span class="title">Input</span>
                             <select id="format-left">
                                 <option value="huml">HUML</option>
@@ -21,7 +21,8 @@
                             </select>
                             <a href="#" role="button" aria-label="Copy to clipboard" class="btn-copy" data-side="left">Copy</a>
                         </div>
-                        <div class="col-4 convert">
+                        <div class="col-5 convert">
+                            <a href="#" role="button" class="btn-swap">Swap</a>
                             <button id="btn-convert">Convert →</button>
                         </div>
                     </div>
