--- a/templates/playground.html
+++ b/templates/playground.html
@@ -60,7 +60,7 @@
 
 <!-- Truckloads of assets from here on -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/codemirror.min.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/theme/neat.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/theme/ayu-mirage.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/addon/fold/foldgutter.min.css">
 <link rel="stylesheet" type="text/css" media="screen" href="{{ get_url(path="/static/playground.css", cachebust=true) }}" />
 
