--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,12 @@
     <link rel="alternate" type="application/rss+xml" title="RSS" href="{{ get_url(path="rss.xml", trailing_slash=false) }}">
   {% endblock %}
 
+  {% if page.description %}
+  <meta name="description" content="{{ page.description }}" />
+  {% else %}
+  <meta name="description" content="HUML is a simple, strict, serialization language for documents, datasets, and configuration." />
+  {% endif %}
+
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta property="og:image" content="{{ get_url(path="/static/thumb.png", cachebust=true) }}">
   <link rel="shortcut icon" href="{{ get_url(path="/static/favicon.png" ) }}" />
