--- a/templates/base.html
+++ b/templates/base.html
@@ -35,30 +35,32 @@
     <strong>Table of contents</strong>
     {% if page.toc %}
         <ul>
-        {% for h1 in page.toc %}
+        {%- for h1 in page.toc %}
             <li>
                 <a href="{{ h1.permalink | safe }}">{{ h1.title }}</a>
-                {% if h1.children %}
+                {%- if h1.children and h1.children | length > 0 -%}
                     <ul>
-                        {% for h2 in h1.children %}
+                        {%- for h2 in h1.children %}
                             <li>
                                 <a href="{{ h2.permalink | safe }}">{{ h2.title }}</a>
 
+                                {%- if h2.children and h2.children | length > 0 -%}
                                 <ul>
-                                    {% for h3 in h2.children %}
+                                    {%- for h3 in h2.children -%}
                                         <li>
                                             <a href="{{ h3.permalink | safe }}">{{ h3.title }}</a>
                                         </li>
-                                    {% endfor %}
+                                    {%- endfor -%}
                                 </ul>
+                                {%- endif -%}
                             </li>
-                        {% endfor %}
+                        {%- endfor %}
                     </ul>
-                {% endif %}
+                {%- endif -%}
             </li>
-        {% endfor %}
+        {%- endfor -%}
         </ul>
-    {% endif %}
+    {%- endif -%}
   </nav>
   {% endif %}
 
@@ -73,7 +75,7 @@
 
       <div class="items">
         {{ macros::page_link(name="Home", path="") }}
-        {{ macros::page_link(name="Specification", path="@/specifications/v0.1.0.md") }}
+        {{ macros::page_link(name="Specification (v0.2.0)", path="@/specifications/v0.2.0.md") }}
         {{ macros::page_link(name="Code", path="@/code.md") }}
         {{ macros::page_link(name="Playground", path="@/playground.md") }}
       </div>
