--- a/templates/shortcodes/toc.html
+++ b/templates/shortcodes/toc.html
@@ -1,25 +1,25 @@
 <div class="table-of-contents">
     <ul>
-    {% for h1 in page.toc %}
+    {%- for h1 in page.toc -%}
         <li>
             <a href="#{{ h1.id }}">{{ h1.title }}</a>
-            {% if h1.children %}
+            {%- if h1.children and h1.children | length > 0 -%}
                 <ul>
-                {% for h2 in h1.children %}
+                {%- for h2 in h1.children -%}
                     <li>
                         <a href="#{{ h2.id }}">{{ h2.title }}</a>
-                        {% if h2.children %}
+                        {%- if h2.children and h2.children | length > 0 -%}
                             <ul>
-                            {% for h3 in h2.children %}
+                            {%- for h3 in h2.children -%}
                                 <li><a href="#{{ h3.id }}">{{ h3.title }}</a></li>
-                            {% endfor %}
+                            {%- endfor -%}
                             </ul>
-                        {% endif %}
+                        {%- endif -%}
                     </li>
-                {% endfor %}
+                {%- endfor -%}
                 </ul>
-            {% endif %}
+            {%- endif -%}
         </li>
-    {% endfor %}
+    {%- endfor -%}
     </ul>
 </div>
